<resources>
    <string name="app_name">DaggerHilt</string>
    <string name="general_error_message">Something went wrong!</string>
    <string name="network_error_message">No internet connection!</string>
    <string name="search">Search</string>
    <string name="issues">Issues</string>
    <string name="forks">Forks</string>
    <string name="stars">Stars</string>
    <string name="updated">Updated</string>
    <string name="description">Description</string>
    <string name="search_hint">You can search globally across all of GitHub.</string>
</resources>